--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,11 +10,11 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.myTheme"
+        android:theme="@style/Theme.AppCompat.DayNight"
         tools:targetApi="31">
         <activity
             android:name=".navbar"
-            android:exported="true">
+            android:exported="false">
 
 
 
@@ -23,6 +23,14 @@
         </activity>
         <activity
             android:name=".SignUp_User"
+            android:exported="false">
+
+
+
+
+        </activity>
+        <activity
+            android:name=".MainActivity"
             android:exported="true">
 
             <intent-filter>
@@ -30,12 +38,6 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
-
-        </activity>
-        <activity
-            android:name=".MainActivity"
-            android:exported="true">
 
 
 
