--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,14 +12,16 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.DayNight"
         tools:targetApi="31">
+
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyAj7KRJ2dxrieHx5KRS5lf81ReVhU6YRXY" />
+
+
+
         <activity
             android:name=".navbar"
             android:exported="false">
-
-
-
-
-
         </activity>
         <activity
             android:name=".SignUp_User"
